--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,26 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: auto;
+  padding:0px 0px 0px 0px;
   text-align: center;
 }
 
+#diceTable{
+  max-height: 600px;
+  height: 100vh;
+  max-width: 90%;
+  width: 100vw;
+}
+
+
 .logo {
-  height: 6em;
+
   padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+  filter: drop-shadow(0 0 2em #6a07db7c);
+
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
