--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,23 @@
 #root {
-  max-width: 1280px;
+  width: 1280px;
   margin: auto;
   padding:0px 0px 0px 0px;
-  text-align: center;
+
 }
 
 #diceTable{
-  max-height: 600px;
-  height: 100vh;
-  width: 100vw;
+  height: 600px;
+  width: 1280px;
 }
 
 
-.logo {
+.die {
 
   padding: 1.5em;
   filter: drop-shadow(0 0 2em #6a07db7c);
 
 }
-.logo:hover {
+.die:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
 
